@@ -42,8 +42,8 @@
 #include "ssh2.h"
 #include "key.h"
 #include "hostfile.h"
-#include "buffer.h"
 #include "auth.h"
+#include "buffer.h"
 #include "packet.h"
 #include "dispatch.h"
 #include "log.h"
